# demi-controller

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILLS.md  pyproject.toml
.agents/skills/agentic-sdd/: SKILL.md
.agents/skills/agentic-self-review/: SKILL.md
.agents/skills/dev-journal/: SKILL.md
.agents/skills/diagnosing-bugs/: SKILL.md  UPSTREAM.md
.agents/skills/docs-quality-review/: SKILL.md
.agents/skills/docstring-style/: SKILL.md
.agents/skills/inspect-gui-states/: SKILL.md
.agents/skills/inspect-gui-transitions/: SKILL.md
.agents/skills/pr-merge-cleanup/: SKILL.md
.agents/skills/pypi-release/: SKILL.md
.agents/skills/refactor-after-green/: SKILL.md
.agents/skills/spec-format/: SKILL.md
.agents/skills/tdd-one-cycle/: SKILL.md
.agents/skills/tdd-test-list/: SKILL.md
.agents/skills/tdd-workflow/: SKILL.md
.agents/skills/test-desiderata-review/: SKILL.md
.agents/skills/tidy-first/: SKILL.md
.agents/skills/type-boundary-review/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  package.yml
packaging/: LICENSES.md  build.py  launcher.py  smoke.py  verify_distribution.py
spec/: dev-journal.md  hardware-test-log.md  publishing.md
spec/complete/unit_001/: PROJECT_BOOTSTRAP.md
spec/complete/unit_002/: DOMAIN_AND_SETTINGS.md
spec/complete/unit_003/: INPUT_PIPELINE.md
spec/complete/unit_004/: UI_AND_PYGLET.md
spec/complete/unit_005/: CONTROLLER_RUNTIME.md
spec/complete/unit_006/: SWBT_ADAPTER.md
spec/complete/unit_007/: SETTINGS_MODAL.md
spec/complete/unit_008/: HARDWARE_STABILITY.md
spec/complete/unit_009/: OS_PORTABILITY.md
spec/complete/unit_010/: PACKAGING.md
spec/complete/unit_011/: APPLICATION_ASSEMBLY_AND_GUI_WIRING.md
spec/complete/unit_012/: CONTROLLER_RUNTIME_CANCELLABLE_SHUTDOWN.md
spec/complete/unit_013/: LEGACY_UI_AND_PYGLET_REMOVAL.md
spec/complete/unit_014/: PYSIDE6_APPLICATION_SHELL.md
spec/complete/unit_015/: QT_INPUT_AND_CONTROLLER_PREVIEW.md
spec/complete/unit_016/: QT_STANDARD_CONTROLS_AND_DIALOGS.md
spec/complete/unit_017/: QT_RUNTIME_AND_LIFECYCLE_INTEGRATION.md
spec/complete/unit_018/: QT_QUALITY_AND_OS_ACCEPTANCE.md
spec/complete/unit_019/: QT_ACTION_WIRING_REGRESSION.md
spec/complete/unit_020/: MAPPING_DIALOG_VISIBLE_COLUMNS.md
spec/complete/unit_021/: CI_RESPONSE_TIMER_PRECISION.md
spec/initial/: AGENTIC_SDD.md  PROJECT_GUIDE.md  QUALITY_GATES.md  README.md  architecture.md  configuration.md  input.md  lifecycle.md  naming.md  requirements.md  risks.md  roadmap.md  swbt-integration.md  testing.md  ui.md
spec/ui-redesign/: CURRENT_UI_REMOVAL.md  MILESTONES.md  PYSIDE6_UI_DESIGN.md  README.md  RELATIVE_MOUSE_INPUT.md
src/demi/: THIRD_PARTY_NOTICES.md  __init__.py  __main__.py  app.py  cli.py
src/demi/config/: __init__.py  (+5 more)
tests/: conftest.py
tests/hardware/: test_pro_controller.py
tests/unit/: test_ci.py  test_cli.py  test_documentation.py  test_legacy_ui_removal.py  test_package.py  test_packaging.py  test_pyglet_import_boundary.py  test_work_unit_records.py
tools/: manual_ui_acceptance.py
(+220 files in other folders)
