[project]
name = "demi-controller"
version = "0.1.0"
description = "A desktop application that converts PC keyboard and mouse inputs into virtual Pro Controller inputs and sends Bluetooth HID inputs to the target device."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "niart120" },
]
maintainers = [
    { name = "niart120" },
]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "platformdirs>=4.10.0",
    "swbt-python>=0.3.0,<0.4.0",
    "tomli-w>=1.2.0",
]

[project.scripts]
demi = "demi.cli:main"
project-demi = "demi.cli:main"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pyinstaller>=6.21.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.16",
    "twine>=6.2.0",
    "ty>=0.0.44",
]

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.uv]
cache-dir = ".uv-cache"

[tool.uv.build-backend]
module-name = "demi"
source-include = [
    "AGENTS.md",
    "SKILLS.md",
    "packaging/**",
    "spec/**",
    "tests/**",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15.16"
src = ["src", "tests"]
target-version = "py312"
force-exclude = true
extend-exclude = [
    ".uv-cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["D203", "D213"]
select = [
    "A",
    "ANN",
    "ARG",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "D",
    "DTZ",
    "E",
    "F",
    "FURB",
    "I",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLW",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TRY",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D100", "D103", "S101"]
"packaging/*.py" = ["S603", "T201", "TRY003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.isort]
known-first-party = ["demi"]

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.terminal]
error-on-warning = true
output-format = "concise"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
xfail_strict = true
empty_parameter_set_mark = "fail_at_collect"
filterwarnings = [
    "error",
]
markers = [
    "bumble: requires a dedicated USB Bluetooth dongle opened through Bumble",
    "hardware: requires a target NX-family console and Bluetooth HID behavior",
    "ui: exercises a GUI event loop and may require a display server",
]

[tool.coverage.run]
branch = true
source = ["demi"]

[tool.coverage.report]
show_missing = true
skip_covered = true
